# noname

./: .gitignore  ACI.md  AGENTS.md  API_LIST.md  CONFIG.md  CONTEXT.md  README.md  TODO.md  USAGE.md  algorithms.py  app.py  main.py  maycando.md  pyproject.toml  references.md  visualization.py
.serena/: project.yml
.serena/memories/: noname_overview.md  noname_style.md  suggested_commands.md  task_completion.md
artifacts/: metrics.csv
config/: algorithms.json
resources/templates/: ingredients.csv  ingredients.json
tests/: test_load_ingredients_csv.py  test_main.py  test_no_is_literal.py
