[project]
name = "noname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "dilipred>=4.0.9",
   "numpy>=1.23.5",
   "pymoo>=0.6.1.5,<0.7.0",
   "pyswarms>=1.3.0",
   "scikit-learn >=1.2.0",
   "ipython>=8.12.0,<9.0.0",
   "matplotlib>=3.8.0,<4.0.0",
]
