[project]
name = "noname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "dilipred>=4.0.9",
   "numpy>=1.23.5",
   "pymoo>=0.6.1.5,<0.7.0",
   "pyswarms>=1.3.0",
   "scikit-learn >=1.2.0",
   "ipython>=8.12.0,<9.0.0",
   "matplotlib>=3.8.0,<4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "F632",  # 'is' / 'is not' 与字面量比较
]
ignore = []

[tool.ruff.format]
quote-style = "double"
